# fintech-data-pipeline

./: .gitignore  .python-version  README.md  dealer.py  lambda_fxn.py  loader.py  main.py  pipeline.py  pyproject.toml  s3_upload.py
data_tables/: app_events.csv  transactions.csv  users.csv  wallet_balances.csv
